# bacchus_lcas

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yaml  novnc-apache-proxy.conf
bacchus_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bacchus_gazebo/config/: gazebo_controller.yaml  laser_config.yaml
bacchus_gazebo/config/gazebo/: actors_AB.yaml  models_AB.yaml
bacchus_gazebo/config/move_base/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
bacchus_gazebo/config/move_base/dwa/: dwa_move_base_params.yaml  dwa_planner_ros.yaml
bacchus_gazebo/config/move_base/teb/: teb_move_base_params.yaml  teb_planner_ros.yaml
bacchus_gazebo/launch/: amcl.launch  base_bringup.launch  empty_world.launch  localization_test.launch  move_base_seq.launch  ndt_localization.launch  rbsherpa.launch  rbsherpa_complete.launch  rbsherpa_localization_complete.launch  rbsherpa_move_base.launch  rbsherpa_navigation_complete.launch  rbvogui.launch  rbvogui_complete.launch  rbvogui_move_base.launch  rbvogui_navigation_complete.launch  rbvogui_run_robot.launch  rtabmap_test.launch  thorvald-sim-vy0.launch  thorvald-sim-vy1.launch  thorvald-sim-vy2.launch  thorvald-sim-vy3.launch  thorvald-sim-vy4.launch  thorvald-sim.launch  thorvald.launch  vineyard_demo.launch  vineyard_heightmap.launch  world.launch
bacchus_gazebo/maps/: cropped.yaml  riseholme.yaml  riseholme_map.pgm
bacchus_gazebo/maps/riseholme/: sim_riseholme_empty.yaml
bacchus_gazebo/media/materials/scripts/: rasberry_colours.material  rasberry_textures.material
bacchus_gazebo/models/a4_plane/: a4_plane.sdf  model.config
bacchus_gazebo/models/a4_plane/materials/scripts/: a4_plane.material
bacchus_gazebo/models/calibration_sign/: model.config  model.sdf
bacchus_gazebo/models/calibration_sign/materials/scripts/: calibration_sign.material
bacchus_gazebo/models/docking_pole/: model.config  model.sdf
bacchus_gazebo/models/docking_pole/meshes/: docking_pole.stl
bacchus_gazebo/models/frontage/: model.sdf
bacchus_gazebo/models/heightmap0/: model.sdf
bacchus_gazebo/models/heightmap0/meshes/: heightmap.dae
bacchus_gazebo/models/heightmap1/: model.config  model.sdf
bacchus_gazebo/models/riseholme_satellite/: model.config  model.sdf
bacchus_gazebo/models/riseholme_satellite/materials/scripts/: map_tiles.material
bacchus_gazebo/models/station_label_1/: model.config  station_label_1.sdf
bacchus_gazebo/models/station_label_1/materials/scripts/: station_label_1.material
bacchus_gazebo/models/station_label_2/: model.config  station_label_2.sdf
bacchus_gazebo/models/station_label_2/materials/scripts/: station_label_2.material
bacchus_gazebo/models/station_label_3/: model.config  station_label_3.sdf
bacchus_gazebo/models/vine_t0/: model.config  model.sdf
bacchus_gazebo/rviz/: polytunnel_velodyne_kinect2.rviz  rbsherpa.rviz  rbvogui.rviz  rtab_demo.rviz  two_robots.rviz  vineyard_demo.rviz
bacchus_gazebo/src/: ActorCollisionsPlugin.cc  remap_odom_and_tf.py
bacchus_gazebo/tests/: nav_test.py  test_vogui.test  testme.test
bacchus_gazebo/urdf/: PhenoRob_sensors.xacro  actor.xacro  bacchus_sensors.xacro  sensors.xacro  simple_sensors.xacro
bacchus_gazebo/urdf/sensors/: semantic.xacro  sensor_fake_sprayer.xacro  sensor_hokuyo_laser.xacro  sensor_hokuyo_laser_bottom_left.xacro  sensor_hokuyo_laser_top_right.xacro  sensor_imu.xacro  sensor_kinect_v2.xacro  sensor_kinect_v2_front.xacro  sensor_kinect_v2_left.xacro  sensor_kinect_v2_num1.xacro  sensor_kinect_v2_num2.xacro  sensor_kinect_v2_right.xacro  sensor_velodyne_vlp16.xacro
bacchus_gazebo/worlds/: dt_ndt_vineyard_0.world  dt_ndt_vineyard_2.world  dt_ndt_vineyard_4.world  empty.world  empty_grass_minimal.world  ndt_stage0_fence.world  ndt_stage2_fence.world  ndt_stage4_fence.world  ndt_vineyard_0.world  ndt_vineyard_1.world  ndt_vineyard_2.world  ndt_vineyard_3.world  ndt_vineyard_4.world  riseholme.world  riseholme_digital_twin.world  riseholme_digital_twin_4th_Stage_coarse.world  riseholme_digital_twin_4th_Stage_fine.world  riseholme_empty.world  riseholme_gnss.world  riseholme_ncnr.world  riseholme_simple.world  summer_school_mix.world  summer_school_stage0.world  summer_school_stage3.world  vineyard_small.world  vineyard_small_s0_coarse.world  vineyard_small_s1_coarse.world  vineyard_small_s2_coarse.world  vineyard_small_s3_coarse.world  vineyard_small_s4_coarse.world  vineyard_stage0.world  vineyard_stage0_heightmap.world  vineyard_stage0_riseholme.world  vineyard_stage0_riseholme_vertical.world  vineyard_stage0_small.world  vineyard_stage1.world  vineyard_stage2.world  vineyard_stage3.world  vineyard_stage4.world  vineyard_stage4_small.world
bacchus_move_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
bacchus_move_base/config/: carrot_planner.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
bacchus_move_base/config/dwa/: dwa_move_base_params.yaml  dwa_planner_ros.yaml  dwa_planner_ros_omni.yaml
bacchus_move_base/config/eband/: eband_move_base_params.yaml  eband_planner_ros.yaml
bacchus_move_base/config/footprints/: robot_001_footprint.yaml
bacchus_move_base/config/goals/: dt.txt  scenario_line.txt  scenario_loop.txt  scenario_multiple_rows.txt  scenario_single_row.txt  vineyard_demo_goals.txt
bacchus_move_base/config/rbsherpa/costmaps/: global_costmap_params_nomap.yaml  local_costmap_params.yaml
bacchus_move_base/config/rbvogui/costmaps/: costmap_common_params.yaml  global_costmap_params_nomap.yaml
bacchus_move_base/config/teb/: teb_planner_ros.yaml  teb_planner_ros_omni.yaml
bacchus_move_base/launch/: corner_lasers_merger.launch  move_base_dwa.launch  move_base_dwa_multisim.launch  move_base_eband.launch  move_base_teb.launch  move_base_teb_multisim.launch  rbsherpa_amcl.launch  rbsherpa_map_server.launch  rbvogui_amcl.launch  rbvogui_localization_complete.launch  rbvogui_map_server.launch  rbvogui_move_base.launch  rbvogui_navigation_complete.launch
bacchus_move_base/scripts/: send_goals.py
(+117 files in other folders)
