<?xml version="1.0"?>
<package format="2">
  <name>bacchus_move_base</name>
  <version>0.2.2</version>
  <description>The bacchus_move_base package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="smolinamellado@lincoln.ac.uk">Sergi Molina mellado</maintainer>
  <maintainer email="rpolvara@lincoln.ac.uk">Riccardo Polvara</maintainer>

  <license>MIT</license>


  <!-- <url type="website">http://wiki.ros.org/rasberry_move_base</url> -->

  <!-- Example: -->
  <author email="smolinamellado@lincoln.ac.uk">Sergi Molina Mellado</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dwa_local_planner</build_depend>
  <!--build_depend>eband_local_planner</build_depend-->
  <build_depend>move_base</build_depend>
  <build_depend>robot_pose_publisher</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ira_laser_tools</build_depend>
  <build_depend>rbvogui_localization</build_depend>
  <build_depend>rbvogui_navigation</build_depend>
  <build_depend>rbvogui_gazebo</build_depend>
  <build_depend>rbvogui_description</build_depend>
  <build_depend>rbvogui_control</build_depend>
  <build_depend>robotnik_pad</build_depend>
  <build_depend>robotnik_base_hw_sim</build_depend>
  <build_depend>robotnik-msgs</build_depend>
  <build_depend>robotnik-twist2ackermann</build_depend>
  <build_depend>rcomponent</build_depend>
  <build_depend>omni-drive-controller</build_depend>
  <build_depend>ackermann-drive-controller</build_depend>

  <exec_depend>dwa_local_planner</exec_depend>
  <!--exec_depend>eband_local_planner</exec_depend-->
  <exec_depend>move_base</exec_depend>
  <exec_depend>robot_pose_publisher</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>ira_laser_tools</exec_depend>
  <exec_depend>rbvogui_localization</exec_depend>
  <exec_depend>rbvogui_navigation</exec_depend>
  <exec_depend>rbvogui_gazebo</exec_depend>
  <exec_depend>rbvogui_description</exec_depend>
  <exec_depend>rbvogui_control</exec_depend>
  <exec_depend>robotnik_pad</exec_depend>
  <exec_depend>robotnik_base_hw_sim</exec_depend>
  <exec_depend>robotnik-msgs</exec_depend>
  <exec_depend>robotnik-twist2ackermann</exec_depend>
  <exec_depend>rcomponent</exec_depend>
  <exec_depend>omni-drive-controller</exec_depend>
  <exec_depend>ackermann-drive-controller</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
