<?xml version="1.0"?>
<package format="2">
  <name>bacchus_move_base</name>
  <version>0.3.0</version>
  <description>The bacchus_move_base package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="smolinamellado@lincoln.ac.uk">Sergi Molina mellado</maintainer>
  <maintainer email="rpolvara@lincoln.ac.uk">Riccardo Polvara</maintainer>

  <license>MIT</license>


  <!-- <url type="website">http://wiki.ros.org/rasberry_move_base</url> -->

  <!-- Example: -->
  <author email="smolinamellado@lincoln.ac.uk">Sergi Molina Mellado</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dwa_local_planner</build_depend>
  <!--build_depend>eband_local_planner</build_depend-->
  <build_depend>move_base</build_depend>
  <build_depend>robot_pose_publisher</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ira_laser_tools</build_depend>

  <exec_depend>dwa_local_planner</exec_depend>
  <!--exec_depend>eband_local_planner</exec_depend-->
  <exec_depend>move_base</exec_depend>
  <exec_depend>robot_pose_publisher</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>ira_laser_tools</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
